--- a/index.html
+++ b/index.html
@@ -37,8 +37,11 @@
       </div>
     </nav>
     <section id="profile">
-      <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="John Doe profile picture" />
+      <!-- <div class="section__pic-container">
+        <img src="./assets/cleber-foto.jpg" alt="cleber batista foto perfil" />
+      </div> -->
+      <div class="section__pic-cleber">
+        <img src="./assets/cleber-foto.jpg" alt="cleber batista foto perfil" />
       </div>
       <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
@@ -69,7 +72,6 @@
             onclick="window.open('https://github.com/Cleber-0101', '_blank')"
           />
         </div>
-        
       </div>
     </section>
     <section id="about">
@@ -77,11 +79,7 @@
       <h1 class="title">Sobre mim</h1>
       <div class="section-container">
         <div class="section__pic-container">
-          <img
-            src="./assets/about-pic.png"
-            alt="Profile picture"
-            class="about-pic"
-          />
+          <img src="./assets/aaa.jpg" alt="Profile picture" class="about-pic" />
         </div>
         <div class="about-details-container">
           <div class="about-containers">
@@ -101,17 +99,30 @@
                 class="icon"
               />
               <h3>Educação</h3>
-              <p>Universidade Cruzeiro do Sul<br />Curso : Analise e desenvolvimento de sistemas</p>
+              <p>
+                Universidade Cruzeiro do Sul<br />Curso : Analise e
+                desenvolvimento de sistemas
+              </p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+              Sou Desenvolvedor de software gosto de codificar boa parte do meu
+              dia Com 2 anos de experiência na area de tecnologia Sou motivado
+              pela busca contínua de aprendizado e pelo desafio de enfrentar
+              problemas complexos e estou sempre aberto a explorar novas
+              tecnologias e metodologias para melhorar meu conjunto de
+              habilidades. Valorizo o trabalho em equipe assim podemos crescer
+              juntos, a colaboração e a troca de conhecimento tem sido
+              fundamental pra mim , o projeto conecta fé que esta logo abaixo na
+              minha area de projetos foi o start na minha carreira como
+              desenvolvedor , modestia a parte o app ficou sensacional ,
+              explorei todas as partes do desenvolvimento desse aplicativo ,
+              front-end usando Flutter e Back-end ultilizando c# e .Net , figma
+              para visualizar as telas e seguindo boas praticas de desenvolvimento, o time de
+              desenvolvedores foi uma parte importantissima nesse projeto pois
+              conseguimos nos comunicar bem e com um clima leve conseguimos
+              finalizar esse software convido voce a saber mais como ficou esse projeto incrivel 
             </p>
           </div>
         </div>
@@ -182,25 +193,14 @@
                   class="icon"
                 />
                 <div>
-                  <h3>TypeScript</h3>
+                  <h3>React</h3>
                   <p>Basic</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Material UI</h3>
-                  <p>Intermediate</p>
                 </div>
               </article>
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">Backend Development</h2>
             <div class="article-container">
               <article>
                 <img
@@ -220,8 +220,8 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Node JS</h3>
-                  <p>Intermediate</p>
+                  <h3>C-Sharp</h3>
+                  <p>Basic</p>
                 </div>
               </article>
               <article>
@@ -231,8 +231,30 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Express JS</h3>
-                  <p>Intermediate</p>
+                  <h3>MySQl</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>.Net</h3>
+                  <p>Basic</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Java</h3>
+                  <p>Basic</p>
                 </div>
               </article>
               <article>
@@ -258,19 +280,19 @@
       />
     </section>
     <section id="projects">
-      <p class="section__text__p1">Browse My Recent</p>
-      <h1 class="title">Projects</h1>
+      <p class="section__text__p1">projetos recentes</p>
+      <h1 class="title">Projetos</h1>
       <div class="experience-details-container">
         <div class="about-containers">
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/conecta-fe.png"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">conecta-fé</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -280,21 +302,21 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://conectafe.com.br/home/'"
               >
-                Live Demo
+                deploy
               </button>
             </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/"
                 alt="Project 2"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">(EM BREVE)</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -306,19 +328,19 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
-                Live Demo
+                deploy 
               </button>
             </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">(EM BREVE)</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
@@ -330,7 +352,7 @@
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
-                Live Demo
+                deploy
               </button>
             </div>
           </div>
@@ -344,8 +366,8 @@
       />
     </section>
     <section id="contact">
-      <p class="section__text__p1">Get in Touch</p>
-      <h1 class="title">Contact Me</h1>
+      <p class="section__text__p1">por fim !</p>
+      <h1 class="title">Contate-me</h1>
       <div class="contact-info-upper-container">
         <div class="contact-info-container">
           <img
@@ -353,7 +375,11 @@
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+          <p>
+            <a href="mailto:cleberbatista99@hotmail.com"
+              >cleberbatista99@hotmail.com</a
+            >
+          </p>
         </div>
         <div class="contact-info-container">
           <img
@@ -361,7 +387,11 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p>
+            <a href="https://www.linkedin.com/in/cleber-batista-bab520200/"
+              >LinkedIn</a
+            >
+          </p>
         </div>
       </div>
     </section>
@@ -369,14 +399,14 @@
       <nav>
         <div class="nav-links-container">
           <ul class="nav-links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">Sobre</a></li>
+            <li><a href="#experience">Experiencia</a></li>
+            <li><a href="#projects">Projetos</a></li>
+            <li><a href="#contact">Contato</a></li>
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2023 John Doe. All Rights Reserved.</p>
+      <p>Copyright &#169; Desenvolvedor Cleber</p>
     </footer>
     <script src="script.js"></script>
   </body>
